debugged! qlearning